# PointCloudHandler

./: .gitignore  CMakeLists.txt  PointCloudHandler.sln  rgb_to_name.py
CppWrapper/: CppWrapper.vcxproj  CppWrapper.vcxproj.filters  dllmain.cpp  exports.h  pclWrapper.cpp  pclWrapper.h
Headers/: Api.h  typedefs.h
Headers/Primitives/: Math.hpp  MeshPlaneDetector.h  Metaplane.h  Model.h  PipelineProcess.hpp  PointCloud.h  Scene.hpp  Utility.h
PointCloudHandler/: Program.cs
Sources/: main.cpp
Sources/Api/: Api.cpp  Perform_Model_Overlay.cpp  Transformation.cpp
Sources/Primitives/Cloud/: CloudReconstruction.cpp  CloudShapeDetection.cpp  PointCloud.cpp  Triangulation.cpp
Sources/Primitives/MeshPlaneDetector/: MeshPlaneDetector.cpp  Metaplane.cpp  Utils.cpp
Sources/Primitives/Model/: Model.cpp  ModelGeometry.cpp  ModelShapeDetection.cpp  PlanesFormation.cpp
